# dokumentenaustausch

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  main.py  pyproject.toml
.architecture/: INDEX.md  PROGRESS.md  phase-0-brief.md
.claude/: README.md  constitution.md  settings.json
.claude/agents/: critic-core.md  feature-critic.md  master-critic.md  slice-planner-critic.md
.claude/architecture/: PROGRESS.md  phase-1-system.md
.claude/commands/: feature-architect.md  master-architect.md  plan-slice-manual.md  plan-slice.md
.claude/hooks/: auto-approve-web.py  block-dangerous.sh  overseer_stop.py  protect-paths.sh
.claude/overseer/: .last_audit_sha  MEMORY.md  ledger.md
.claude/premises/: premise-log.md
.claude/references/: madr-format.md  system-design.md
.overseer/: .last_audit_sha  .last_continue_sha  MEMORY.md  audit.md  escalations.md  ledger.md
.overseer/slice/: magic-link-ui.md  overseer-v1-5-validation.md  resolver-perf.md  submit-handler.md  token-instance-binding.md
artifacts/: notes-during-session.md
artifacts/spikes/: auto-overseer-redesign-2026-05-22.md  klardaten-delete-semantics-2026-05-26.json  klardaten-size-envelope-2026-05-26.json  submit-handler-smoke-2026-05-27.json  submit-letter-discovery-2026-05-26.md  submit-multi-file-upload-2026-05-26.json  submit-sb-discovery-2026-05-26.md
docs/: DATEV-DEVELOPER-PORTAL.md  README.md  SECURITY.md  index.md  klardaten.json  klardaten.txt
docs/adr/: 0001-resolver-perf-persisted-index.md  0002-klardaten-gateway-for-datev.md  0003-klardaten-gateway-no-dollar-prefix.md  0003-uv-package-manager.md  0004-python-312-strict-typing.md  0005-klardaten-gateway-no-dollar-prefix.md  0006-binder-as-state-store-for-replay-policy.md  0007-best-effort-multi-file-upload-no-rollback.md
references/: software-architecture.md
scripts/: probe_dms.py  probe_doc_listing.py  probe_download_2026-05-15.py  probe_klardaten_delete_semantics_2026-05-26.py  probe_klardaten_size_envelope_2026-05-26.py  probe_letter_id_stability_2026-05-26.py  probe_request_letter_structure_items_2026-05-26.py  smoke_submit_handler.py  smoke_test_create_request.py  smoke_test_datev_upload.py  smoke_test_sb_form.py  smoke_token_instance_binding.py  spike_direct_lookup_2026-05-19.py  spike_multi_file_upload.py
tests/: test_env_validation.py  test_logging_visibility.py  test_overseer_stop.py  test_request_format.py  test_validation_errors.py  test_vgm_files.py
(+127 files in other folders)
