[project]
name = "belegmeister"
version = "0.1.0"
description = "DATEV beleg pipeline via klardaten gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/belegmeister"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"
pythonpath = ["src"]
